v0.13.0/_sources/projections/cyl/cyl_equidistant.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_equidistant.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_cyl_cyl_equidistant.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_equidistant.py:


Cylindrical equidistant
=======================

This simple cylindrical projection is really a linear scaling of longitudes and
latitudes. The most common form is the Plate Carrée projection, where the
scaling of longitudes and latitudes is the same. All meridians and parallels
are straight lines.

**q**\ [*lon0*/\ [*lat0*/]]\ *scale* or **Q**\ [*lon0*/\ [*lat0*/]]\ *width*

The projection is set with **q** or **Q**, and the figure size is set with
*scale* or *width*. Optionally, the central meridian can be set with *lon0*
[Default is the middle of the map]. Optionally, the standard parallel can
be set with *lat0* [Default is the equator]. When supplied, the central
meridian must be supplied as well.

.. GENERATED FROM PYTHON SOURCE LINES 20-32



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_equidistant_001.png
   :alt: cyl equidistant
   :srcset: /projections/cyl/images/sphx_glr_cyl_equidistant_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(
        region="d",
        projection="Q12c",
        land="tan4",
        water="lightcyan",
        frame="afg",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.199 seconds)


.. _sphx_glr_download_projections_cyl_cyl_equidistant.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cyl_equidistant.ipynb <cyl_equidistant.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cyl_equidistant.py <cyl_equidistant.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cyl_equidistant.zip <cyl_equidistant.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
